--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "axios": "^1.4.0",
     "nodeman": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "version"
+    "@babel/plugin-proposal-private-property-in-object": "version",
+    "@types/uuid": "^9.0.1"
   }
 }
