--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "typescript": "^5.1.3"
   }
 }
