--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.11.0",
+    "pg-pool": "^3.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
